--- a/style.css
+++ b/style.css
@@ -2,16 +2,10 @@
     box-sizing: border-box;
 }
 
-body {
-    margin-left: 120px;
-    margin-top: 30px;
-    margin-right: 120px;
-}
-
 header {
     margin: 0 auto;
     max-width: 1200;
-    display: block;
+    text-align: center;
 }
 
 .container {
@@ -28,7 +22,6 @@ nav li {
 
 a img {
     margin-top: 1px;
-    margin-right: 229px;
     margin-bottom: 17.7px;
 }
 
@@ -47,19 +40,22 @@ nav button {
 }
 
 nav li {
-    margin: 8 25px;
+    margin: 8px 25px;
     padding-bottom: 25px;
     border-bottom: 2px solid green;
-    padding: 20px;
-
 }
 
 nav ul {
     list-style: none;
 }
 
+main {
+    text-align: center;
+}
+
 section .container {
     margin-top: 12px;
+    max-width: 1200px;
     background: linear-gradient(97.77deg, rgba (245, 245, 245, 5.0) -23.46%, rgba(245, 245, 245, 0.5) 107.51%)
 }
 
@@ -69,18 +65,22 @@ section .left-side {
     max-width: 50%;
     vertical-align: top;
 }
-p{
+
+p {
     font-size: 16px;
     margin: 0;
 }
+
 h2 {
     margin: 7px;
-    font-size: 70px ;
+    font-size: 70px;
 }
-h2 span{
+
+h2 span {
     color: green;
 }
-section button{
+
+section button {
     width: 140px;
     height: 40px;
     margin-top: 44px;
@@ -93,6 +93,7 @@ section button{
     padding-right: 27px;
     padding-bottom: 9px;
 }
+
 section .right-side {
     display: inline-block;
     max-width: 50%;
