--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 header {
     margin: 0 auto;
-    max-width: 1200;
+    max-width: 1200px;
     text-align: center;
 }
 
@@ -20,15 +20,23 @@ nav li {
     display: inline-block;
 }
 
+nav {
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
 a img {
-    margin-top: 1px;
+    float: left;
     margin-bottom: 17.7px;
+    vertical-align: middle;
+
 }
 
 nav button {
+    float: right;
     width: 100px;
     height: 35px;
-    margin-left: 270px;
     border-radius: 6px;
     background-color: green;
     color: white;
@@ -40,17 +48,26 @@ nav button {
 }
 
 nav li {
-    margin: 8px 25px;
+    margin: 0px 25px;
     padding-bottom: 25px;
     border-bottom: 2px solid green;
+    vertical-align: top;
 }
 
 nav ul {
     list-style: none;
+    vertical-align: -webkit-baseline-middle;
+}
+
+.clearfix {
+    clear: both;
+    display: inline-flex;
 }
 
 main {
     text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 section .container {
@@ -96,5 +113,6 @@ section button {
 
 section .right-side {
     display: inline-block;
-    max-width: 50%;
+    float: right;
+    vertical-align: -webkit-baseline-middle;
 }
