--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+*{
+    font-family: inherit;
+}
+body{
+    font-family: "CeraPro", sans-serif;
+}
 h1 {
     line-height: 16px;
     text-align: center;
