--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
-*{
+* {
     font-family: inherit;
 }
-body{
+
+body {
     font-family: "CeraPro", sans-serif;
 }
+
 h1 {
     line-height: 16px;
     text-align: center;
@@ -42,3 +44,46 @@ button {
     border: 1px solid;
 
 }
+
+.custom-checkbox {
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 20px;
+    cursor: pointer;
+    input{
+        display: none;
+    }
+}
+
+.custom-check-icon {
+    position: relative;
+    width: 8px;
+    height: 8px;
+    border: 1px solid green;
+    margin-right: 8px;
+}
+
+.custom-check-icon::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #46A35899;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.custom-checkbox input:checked ~ .custom-check-icon::before {
+    display: block;
+}
+@keyframes rotating{
+    from {
+      transform:rotate(0deg);
+    }
+    to {
+      transform:rotate(360deg);
+    }
+  }
