--- a/css/style.css
+++ b/css/style.css
@@ -780,7 +780,8 @@ h5 {
     padding-left: 25px;
     padding-bottom: 27px;
     width: 100%;
-    li{
+
+    li {
         font-size: 13px;
         font-weight: 400;
         line-height: 16px;
@@ -795,7 +796,7 @@ h5 {
     max-width: 380px;
     background: #FBFBFB;
     padding-top: 30px;
-    
+
     padding-bottom: 49px;
     margin-left: 173px;
     width: 100%;
@@ -815,9 +816,11 @@ h5 {
     transition: 0.6s;
     color: green;
 }
-.accept{
+
+.accept {
     margin-top: 25px;
-    img{
+
+    img {
         margin-top: 10px;
     }
 }
@@ -834,4 +837,184 @@ footer:hover {
         transition: 0.6s;
     }
 
+}
+
+.menu {
+    display: none;
+}
+
+@media screen and (max-width: 992px) {
+    .list1 {
+        display: none;
+    }
+
+    .list2 {
+        display: none;
+    }
+
+    list3 {
+        display: none;
+    }
+
+    .registr {
+        display: none;
+    }
+
+    .flex {
+        max-width: 992px;
+        justify-content: space-between;
+    }
+
+    .menu {
+        display: block;
+
+    }
+
+    .burger-checkbox {
+        position: absolute;
+        visibility: hidden;
+    }
+
+    .burger {
+        position: fixed;
+        z-index: 30;
+        cursor: pointer;
+        display: block;
+        border: none;
+        background: transparent;
+        width: 40px;
+        height: 26px;
+        right: 50px;
+    }
+
+    .burger::before,
+    .burger::after {
+        content: '';
+        right: 0;
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 10px;
+        background: #000;
+    }
+
+    .burger::before {
+        top: 0;
+        box-shadow: 0 11px 0 #000;
+        transition: box-shadow .3s .15s, top .3s .15s, transform .3s;
+    }
+
+    .burger::after {
+        bottom: 0;
+        transition: bottom .3s .15s, transform .3s;
+    }
+
+    .burger-checkbox:checked+.burger::before {
+        top: 11px;
+        transform: rotate(45deg);
+        box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+        transition: box-shadow .15s, top .3s, transform .3s .15s;
+    }
+
+    .burger-checkbox:checked+.burger::after {
+        bottom: 11px;
+        transform: rotate(-45deg);
+        transition: bottom .3s, transform .3s .15s;
+    }
+
+    .menu-list {
+        top: 40px;
+        right: 0;
+        position: absolute;
+        display: grid;
+        gap: 12px;
+        padding: 42px 20px;
+        margin: 0;
+        background: green;
+        list-style-type: none;
+        transform: translateX(-100%);
+        transition: 0.3s;
+        visibility: hidden;
+        max-width: -500px;
+    }
+
+    .menu-item {
+        display: block;
+        padding: 8px;
+        color: white;
+        font-size: 18px;
+        text-align: end;
+        text-decoration: none;
+    }
+
+    .menu-item:hover {
+        background: rgba(255, 255, 255, .2)
+    }
+
+    .burger-checkbox:checked~.menu-list {
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+        max-width: 500px;
+    }
+
+    .welcome {
+        max-width: 992px;
+    }
+
+    .conteiner {
+        flex-direction: row;
+        max-width: 992px;
+    }
+
+    .container-item {
+        width: 50%;
+    }
+
+    .page {
+        flex-direction: column;
+        max-width: 992px;
+    }
+
+    aside {
+        display: none;
+    }
+
+    .page2 {
+        max-width: 992px;
+    }
+
+    .blog {
+        flex-direction: column;
+    }
+
+    .conteiner2 {
+        flex-direction: column;
+        max-width: 992px;
+    }
+
+    .page3 {
+        max-width: 992px;
+    }
+
+    .top {
+        flex-direction: column;
+    }
+
+    .center2 {
+        max-width: 992px;
+    }
+
+    .bottom {
+        max-width: 992px;
+    }
+
+    .bottom-right {
+        max-width: 300px;
+    }
+
+    footer {
+        max-width: 992px;
+    }
 }
